# quadruped_rviz_setup

./: README.md
twin_description/src/: CMakeLists.txt  package.xml
twin_description/src/config/: quad_controller.yaml
twin_description/src/launch/: display.launch.py  start.py
twin_description/src/meshes/: base_link.stl  left_back_link1.stl  left_back_link2.stl  left_back_link3.stl  left_front_link1.stl  left_front_link2.stl  left_front_link3.stl  right_back_link1.stl  right_back_link2.stl  right_back_link3.stl  right_front_link1.stl  right_front_link2.stl  right_front_link3.stl
twin_description/src/rviz/: robot_display.rviz
twin_description/src/scripts/: command.py  joint_gui.py
twin_description/src/urdf/: main.urdf
